# UICwk

./: CMakeLists.txt  README.md  dashboard.cpp  dashboard.hpp  determinand.cpp  determinand.hpp  eli.cpp  eli.hpp  fluorinated.cpp  fluorinated.hpp  getData.cpp  getLakes.cpp  getLakes.hpp  getUniqueItems.cpp  getUniqueItems.hpp  main.cpp  page3  physicalPage.cpp  physicalPage.hpp  plan.txt  pollutants_overview.cpp  pollutants_overview.hpp  pop.cpp  pop.hpp  sample.cpp  sample.hpp  sampleset.cpp  sampleset.hpp  testRead.cpp
data/: testData.csv
